Fix overflow on 'nothing selected' message

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -17,7 +17,7 @@ body {
 
 .none-selected {
   text-align: center;
-  height: 100%;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
